--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
 	<li>
-		<a href="" target="_blank">DoFE: Domain-oriented Feature Embedding for Generalizable Fundus Image Segmentation on Unseen Datasets</a><br>
+		<a href="https://ieeexplore.ieee.org/document/9163289" target="_blank">DoFE: Domain-oriented Feature Embedding for Generalizable Fundus Image Segmentation on Unseen Datasets</a><br>
 		Shujun Wang, <b>Lequan Yu</b>, Kang Li, Xin Yang, Chi-Wing Fu, Pheng-Ann Heng. <br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
 	</li>
@@ -140,6 +140,9 @@
 		<a href="https://arxiv.org/abs/2007.09316" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
 		Shujun Wang, <b>Lequan Yu</b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/EmmaW8/EISNet" target="_blank">code</a>]
+		</p>
 	</li>
 	<li>
 		<a href="" target="_blank">Robust Medical Image Segmentation from Non-expert Annotations with Tri-network</a><br>
