--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		[08/2020] One paper about domain generalization was accepted by TMI.
 	</li>
 	<li>
-		[07/2020] I have received the <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">"<font color="red">CUHK Young Scholars Thesis Award 2019</font>"</a>.
+		[07/2020] I have received the <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">"<font color="red">CUHK Young Scholars Thesis Award 2019</font>"</a>, the only awardee in the Faculty of Engineering.
 	</li>
 	<li>
 		[07/2020] Three papers were accepted by ECCV 2020, TMI, and MedIA. 
@@ -175,20 +175,28 @@
 			[<a href="https://github.com/liuquande/SRC-MT" target="_blank">code</a>]
 		</p>
 	</li>
+	
 	<li>
-		<a href="https://arxiv.org/abs/1903.00348" target="_blank">Transformation-consistent Self-ensembling Model for Semi-supervised Medical Image Segmentation</a><br>
-		Xiaomeng Li, <b>Lequan Yu</b>, Hao Chen, Chi-Wing Fu, Lei Xing, Pheng-Ann Heng.<br>
-		<em>IEEE Transaction on Neural Network and Learning System</em> (<i><b>TNNLS</b></i>), 2020.</br>
-		<p style="margin-top:3px">
-			[<a href="https://github.com/xmengli999/TCSM" target="_blank">code</a>]
-		</p>
+		<a href="./files/Cross_modal_image_segmentation.pdf" target="_blank">Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation</a><br>
+		Kang Li, <b>Lequan Yu</b>, Shujun Wang, and Pheng-Ann Heng.<br>
+		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2020.</br>
 	</li>
+
 	<li>
 		<a href="https://arxiv.org/abs/1905.01684" target="_blank">Unsupervised Detection of Distinctive Regions on 3D Shapes</a><br>
 		Xianzhi Li, <b>Lequan Yu</b>, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
 		<em>ACM Transactions on Graphics</em> (<i><b>ACM TOG</b></i>), 2020.</br>
 		<p style="margin-top:3px">
 			[<a href="https://github.com/nini-lxz/Unsupervised-Shape-Distinction-Detection" target="_blank">code</a>]
+		</p>
+	</li>
+
+	<li>
+		<a href="https://arxiv.org/abs/1903.00348" target="_blank">Transformation-consistent Self-ensembling Model for Semi-supervised Medical Image Segmentation</a><br>
+		Xiaomeng Li, <b>Lequan Yu</b>, Hao Chen, Chi-Wing Fu, Lei Xing, Pheng-Ann Heng.<br>
+		<em>IEEE Transaction on Neural Network and Learning System</em> (<i><b>TNNLS</b></i>), 2020.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/xmengli999/TCSM" target="_blank">code</a>]
 		</p>
 	</li>
 	
@@ -201,13 +209,6 @@
 		</p>
 	</li>	
 
-	
-	<li>
-		<a href="./files/Cross_modal_image_segmentation.pdf" target="_blank">Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation</a><br>
-		Kang Li, <b>Lequan Yu</b>, Shujun Wang, and Pheng-Ann Heng.<br>
-		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2020.</br>
-	</li>
-	
 	<!--
 	<li>
 		<a href="https://arxiv.org/abs/1811.12506" target="_blank">3D Semi-supervised Learning with Uncertainty-aware Multi-view Co-training</a><br>
