--- a/index.html
+++ b/index.html
@@ -131,14 +131,15 @@
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
+		* below indicates equal contribution; <sup>†</sup> below indicates corresponding authorship.
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/9163289" target="_blank">DoFE: Domain-oriented Feature Embedding for Generalizable Fundus Image Segmentation on Unseen Datasets</a><br>
-		Shujun Wang, <b>Lequan Yu</b>, Kang Li, Xin Yang, Chi-Wing Fu, Pheng-Ann Heng. <br>
+		Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Kang Li, Xin Yang, Chi-Wing Fu, Pheng-Ann Heng. <br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
 	</li>
 	<li>
 		<a href="https://arxiv.org/abs/2007.09316" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
-		Shujun Wang, <b>Lequan Yu</b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
+		Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
 		<p style="margin-top:3px">
 			[<a href="https://github.com/EmmaW8/EISNet" target="_blank">code</a>]
@@ -151,7 +152,7 @@
 	</li>
 	<li>
 		<a href="https://arxiv.org/abs/2007.06279" target="_blank">Dual-Teacher: Integrating Intra-domain and Inter-domain Teachers for Annotation-efficient Cardiac Segmentation</a><br>
-		Kang Li, Shujun Wang, <b>Lequan Yu</b>, Pheng-Ann Heng. <br>
+		Kang Li, Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Pheng-Ann Heng. <br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2020.</br>
 	</li>
 	
@@ -169,7 +170,7 @@
 
 	<li>
 		<a href="https://arxiv.org/abs/2005.07377" target="_blank">Semi-supervised Medical Image Classication with Relation-driven Self-ensembling Model</a><br>
-		Quande Liu, <b>Lequan Yu</b>, Luyang Luo, Qi Dou, Pheng-Ann Heng.<br>
+		Quande Liu, <b>Lequan Yu<sup>†</sup></b>, Luyang Luo, Qi Dou, Pheng-Ann Heng.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
 		<p style="margin-top:3px">
 			[<a href="https://github.com/liuquande/SRC-MT" target="_blank">code</a>]
@@ -178,7 +179,7 @@
 	
 	<li>
 		<a href="./files/Cross_modal_image_segmentation.pdf" target="_blank">Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation</a><br>
-		Kang Li, <b>Lequan Yu</b>, Shujun Wang, and Pheng-Ann Heng.<br>
+		Kang Li, <b>Lequan Yu<sup>†</sup></b>, Shujun Wang, and Pheng-Ann Heng.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2020.</br>
 	</li>
 
@@ -347,6 +348,7 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2017.</br>
 		<!-- <font color="red">Ranked 1st place in ISIC 2016 Melanoma Classification Challenge</font></br> -->
 		<font color="red">ESI Highly Cited Paper</font></br>
+		<font color="red">Ranked 1st place in Skin Lesion Analysis Towards Melanoma Detection Challenge (ISIC 2016) </font></br>
 		<p style="margin-top:3px">
 			[<a href="skin/index.html" target="_blank">project</a>] 
 			[<a href="https://github.com/yulequan/melanoma-recognition" target="_blank">code</a>]
