--- a/index.html
+++ b/index.html
@@ -129,9 +129,11 @@
 
 
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
-<p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
-		* below indicates equal contribution; <sup>†</sup> below indicates corresponding authorship.
+		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
+	</ul>
+	<p><font face="Arial" size="4"><b>2020</b></font></p> 
+	<ul>
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/9163289" target="_blank">DoFE: Domain-oriented Feature Embedding for Generalizable Fundus Image Segmentation on Unseen Datasets</a><br>
 		Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Kang Li, Xin Yang, Chi-Wing Fu, Pheng-Ann Heng. <br>
