--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Lequan Yu</title>
+<title>Lequan Yu, Stanford University</title>
 
 
 <script>
