--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<br>
 					Email: lequany at stanford dot edu
 				</p>
-				<p> <a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
+				<p> <a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/yulequan"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://www.researchgate.net/profile/Lequan_Yu"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://www.linkedin.com/in/lequan-yu-124811a2"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
@@ -128,7 +128,7 @@
 </ul>
 
 
-<h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
+<h2>Selected Publications [<a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>]</h2>
 	<ul>
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
