--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 		</p>
 	</li>
 	
+	<!--
 	<li>
 		<a href="https://arxiv.org/abs/2002.03366" target="_blank">MS-Net: Multi-Site Network for Improving Prostate Segmentation with Heterogeneous MRI Data</a><br>
 		Quande Liu, Qi Dou, <b>Lequan Yu</b>, and Pheng-Ann Heng.<br>
@@ -211,7 +212,7 @@
 			[<a href="https://github.com/liuquande/MS-Net" target="_blank">code</a>]
 		</p>
 	</li>	
-
+	-->
 	<!--
 	<li>
 		<a href="https://arxiv.org/abs/1811.12506" target="_blank">3D Semi-supervised Learning with Uncertainty-aware Multi-view Co-training</a><br>
@@ -222,6 +223,15 @@
 </ul>
 <p><font face="Arial" size="4"><b>2019</b></font></p> 
 <ul>
+	<li>
+		<a href="https://arxiv.org/abs/1907.07034" target="_blank">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
+		<b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/yulequan/UA-MT" target="_blank">code</a>]
+		</p>
+	</li>
+
 	<li>
 		<a href="https://arxiv.org/abs/1911.01376" target="_blank">CANet: Cross-disease Attention Network for Joint Diabetic Retinopathy and Diabetic Macular Edema Grading</a><br>
 		Xiaomeng Li, Xiaowei Hu, <b>Lequan Yu</b>, Lei Zhu, Chi-Wing Fu, and Pheng-Ann Heng.<br>
@@ -237,14 +247,7 @@
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2019.</br>
 	</li>
 	
-	<li>
-		<a href="https://arxiv.org/abs/1907.07034" target="_blank">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
-		<b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng.<br>
-		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.</br>
-		<p style="margin-top:3px">
-			[<a href="https://github.com/yulequan/UA-MT" target="_blank">code</a>]
-		</p>
-	</li>
+	
 	<li>
 		<a href="https://arxiv.org/abs/1906.11143" target="_blank">Boundary and Entropy-driven Adversarial Learning for Fundus Image Segmentation</a><br>
 		Shujun Wang*, <b>Lequan Yu</b>*, Kang Li, Xin Yang, Chi-Wing Fu, and Pheng-Ann Heng.<br>
@@ -288,7 +291,7 @@
 	
 	<li>
 		<a href="https://arxiv.org/abs/1807.06010" target="_blank">EC-Net: an Edge-aware Point set Consolidation Network</a><br>
-		<b>Lequan Yu</b>*, Xianzhi Li*, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
+		<b>Lequan Yu</b>, Xianzhi Li, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.</br>
 		<p style="margin-top:3px">
 			[<a href="ec-net/index.html" target="_blank">project</a>]
@@ -299,7 +302,7 @@
 	
 	<li>
 		<a href="https://arxiv.org/abs/1801.06761" target="_blank">PU-Net: Point Cloud Upsampling Network</a><br>
-		<b>Lequan Yu</b>*, Xianzhi Li*, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
+		<b>Lequan Yu</b>, Xianzhi Li, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
 		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2018.</br>
 		<p style="margin-top:3px">
 			[<a href="pu-net/index.html" target="_blank">project</a>] 
@@ -360,7 +363,7 @@
 
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/7776845" target="_blank">Integrating Online and Offline 3D Deep Learning for Automated Polyp Detection in Colonoscopy Videos</a><br>
-		<b>Lequan Yu*</b>, Hao Chen*, Qi Dou, Jing Qin, Pheng-Ann Heng.<br>
+		<b>Lequan Yu</b>, Hao Chen, Qi Dou, Jing Qin, Pheng-Ann Heng.<br>
 		<em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2017.</br>
 	</li>
 
@@ -436,12 +439,14 @@
 		</p>
 	</li>
 
+	<!--
 	<li>
 		<a href="https://ieeexplore.ieee.org/abstract/document/7163984" target="_blank">Automatic Detection of Cerebral Microbleeds via Deep Learning Based 3D Feature Representation</a><br>
 		Hao Chen*, <b>Lequan Yu*</b>, Qi Dou, Lin Shi, Vincent CT Mok, Pheng-Ann Heng.<br>
 		<em>IEEE International Symposium on Biomedical Imaging</em> (<i><b>ISBI</b></i>), 2015.</br>
 		
 	</li>
+	-->
 	
 </ul>
 
