--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
 		<a href="https://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14719" target="_blank">Volumetric ConvNets with Mixed Residual Connections for Automated Prostate Segmentation from 3D MR Images</a><br>
 		<b>Lequan Yu</b>, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2017. <b>[Oral Presentation]</b></br>
+		<font color="red">Ranked 1st on Prostate MR Image Segmentation (PROMISE12) leaderboard, until Jan. 2018.</font></br>
 		<p style="margin-top:3px">
 			[<a href="https://promise12.grand-challenge.org/" target="_blank">challenge website</a>]
 		</p>
@@ -351,7 +352,6 @@
 		<a href="https://ieeexplore.ieee.org/document/7792699" target="_blank">Automated Melanoma Recognition in Dermoscopy Images via Very Deep Residual Networks</a><br>
 		<b>Lequan Yu</b>, Hao Chen, Qi Dou, Jing Qin, Pheng-Ann Heng.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2017.</br>
-		<!-- <font color="red">Ranked 1st place in ISIC 2016 Melanoma Classification Challenge</font></br> -->
 		<font color="red">ESI Highly Cited Paper</font></br>
 		<font color="red">Ranked 1st place in Skin Lesion Analysis Towards Melanoma Detection Challenge (ISIC 2016) </font></br>
 		<p style="margin-top:3px">
@@ -387,6 +387,7 @@
 		Qi Dou, <b>Lequan Yu</b>, Hao Chen, Yueming Jin, Xin Yang, Jing Qin, Pheng-Ann Heng.<br>
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2017.<br>
 		<font color="red">MedIA-MICCAI'17 Best Paper Award</font></br>
+		<font color="red">ESI Highly Cited Paper</font></br>
 		<p style="margin-top:3px">
 			[<a href="https://github.com/yulequan/HeartSeg" target="_blank">code</a>]
 		</p>
