--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
-		<tr><td> CUHK Young Scholars Thesis Award 2019 </td></tr>
+		<tr><td> <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">CUHK Young Scholars Thesis Award 2019</a></td></tr>
 		<tr><td> Young Scientist Award Short-listed, Hong Kong Institution of Science, 2019 </td></tr>
 		<tr><td> Teaching Assistant of Merit, 2018</td></tr>
 		<tr><td> <a href="http://www.cse.cuhk.edu.hk/en/achievement/professor-and-research-staff/110-prof-heng-pheng-ann-and-his-team-won-the-best-paper-award-of-medical-image-analysis-in-the-20th-international-conference-on-medical-image-computing-and-computer-assisted-intervention-2017-media-miccai-17">MedIA-MICCAI'17 Best Paper Award</a>, 2017</td></tr>
