--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	Previously, I received the B.Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
 </p>
 <p>
-	My research lies at the intersection of medical image analysis and artificial intelligence. 
+	My research lies at the intersection of artificial intelligence and medical image analysis. 
 	I am dedicated to designing data-efficient learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. 
 	Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.
 </p> 
@@ -80,7 +80,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[08/2020] One paper about domain generalization was accepted by TMI.
+		[09/2020] Two papers were accepted by TMI.
 	</li>
 	<li>
 		[07/2020] I have received the <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">"<font color="red">CUHK Young Scholars Thesis Award 2019</font>"</a>, the only awardee in the Faculty of Engineering.
@@ -135,12 +135,17 @@
 	<p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
 	<li>
+		<a href="" target="_blank">Deep Sinogram Completion with Image Prior for Metal Artifact Reduction in CT Images</a><br>
+		<b>Lequan Yu</b>, Zhicheng Zhang, Xiaomeng Li, Lei Xing. <br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
+	</li>
+	<li>
 		<a href="https://arxiv.org/abs/2007.09316" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
 		Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
 		<p style="margin-top:3px">
 			[<a href="https://github.com/EmmaW8/EISNet" target="_blank">code</a>]
-		</p>
+	</p>
 	</li>
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/9163289" target="_blank">DoFE: Domain-oriented Feature Embedding for Generalizable Fundus Image Segmentation on Unseen Datasets</a><br>
