--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 	<p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
 	<li>
-		<a href="" target="_blank">Deep Sinogram Completion with Image Prior for Metal Artifact Reduction in CT Images</a><br>
+		<a href="https://arxiv.org/abs/2009.07469" target="_blank">Deep Sinogram Completion with Image Prior for Metal Artifact Reduction in CT Images</a><br>
 		<b>Lequan Yu</b>, Zhicheng Zhang, Xiaomeng Li, Lei Xing. <br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
 	</li>
