--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
+	AAAI Conference on Artificial Intelligence (AAAI) 2021<br>
 	IEEE Winter Conference on Applications of Computer Vision (WACV) 2021<br>
 	SIGGRAPH 2020<br>
 	European Conference on Computer Vision (ECCV) 2020<br>
@@ -497,26 +498,27 @@
 
 <li>
 <b>Journal Reviews:</b>
-	<br> 
+	<br>
+	Nature Machine Intelligence <br>
 	Medical Image Analysis (MedIA)<br>
 	IEEE Transactions on Medical Imaging (TMI)<br>
 	IEEE Transactions on Image Processing (TIP)<br>
 	IEEE Transactions on Biomedical Engineering (TBME)<br>
 	IEEE Transactions on Neural Networks and Learning Systems (TNNLS) <br>
 	IEEE Transactions on Automation Science and Engineering (TASE) <br>
+	IEEE Transactions on Artificial Intelligence (TAI) <br>
 	IEEE Transactions on Big Data (TBD) <br>
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
 	IEEE Robotics and Automation Letters (RA-L)<br>
 	Scientific Reports <br>
-	IEEE Access <br>
 	Neurocomputing <br>		
 	International Journal of Computer Assisted Radiology and Surgery (IJCARS)<br>
 	International Journal of Medical Informatics<br>
+	Journal of Applied Clinical Medical Physics (JACMP) <br>
 	Artificial Intelligence in Medicine<br>
 	SPIE Journal of Electronic Imaging (JEI)<br>
 	Computer Methods and Programs in Biomedicine (CMPB)<br>
 	Informatics in Medicine Unlocked<br>
-	Signal Processing
 	<p style="margin-top:3px"></p>		
 </li>
 
