--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 		</p>
 	</li>
 </ul>
-<p><font face="Arial" size="4"><b>Before 2019</b></font></p> 
+<p><font face="Arial" size="4"><b>2018</b></font></p> 
 <ul>
 	<!--
 	<li>
@@ -332,7 +332,9 @@
 		<em>British Machine Vision Conference</em> (<i><b>BMVC</b></i>), 2018.</br>
 	</li>
 
-
+</ul>
+<p><font face="Arial" size="4"><b>Before 2018</b></font></p> 
+<ul>
 	<li>
 		<a href="https://arxiv.org/abs/1708.00573" target="_blank">Automatic 3D Cardiovascular MR Segmentation with Densely-Connected Volumetric ConvNets</a><br>
 		<b>Lequan Yu</b>, Jie-Zhi Cheng, Qi Dou, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
