--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
 	</li>
 	<li>
+		<a href="" target="_blank">Automatic intraprostatic lesion segmentation in multiparametric magnetic resonance images with proposed multiple branch UNet</a><br>
+		Yizheng Chen, Lei Xing, <b>Lequan Yu</b>, Hilary P. Bagshaw, Mark K. Buyyounouski, Bin Han. <br>
+		<em>Medical Physics</em>, 2020.</br>
+	</li>
+	<li>
 		<a href="https://arxiv.org/abs/2007.09316" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
 		Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
