--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Automatic intraprostatic lesion segmentation in multiparametric magnetic resonance images with proposed multiple branch UNet</a><br>
+		<a href="https://aapm.onlinelibrary.wiley.com/doi/abs/10.1002/mp.14517" target="_blank">Automatic intraprostatic lesion segmentation in multiparametric magnetic resonance images with proposed multiple branch UNet</a><br>
 		Yizheng Chen, Lei Xing, <b>Lequan Yu</b>, Hilary P. Bagshaw, Mark K. Buyyounouski, Bin Han. <br>
 		<em>Medical Physics</em>, 2020.</br>
 	</li>
@@ -173,12 +173,12 @@
 	</li>
 	
 	<li>
-		<a href="./files/Cross_modal_image_segmentation.pdf" target="_blank">Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation</a><br>
+		<a href="https://aaai.org/ojs/index.php/AAAI/article/view/5421" target="_blank">Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation</a><br>
 		Kang Li, <b>Lequan Yu<sup>†</sup></b>, Shujun Wang, and Pheng-Ann Heng.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2020.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Robust Medical Image Segmentation from Non-expert Annotations with Tri-network</a><br>
+		<a href="https://link.springer.com/chapter/10.1007/978-3-030-59719-1_25" target="_blank">Robust Medical Image Segmentation from Non-expert Annotations with Tri-network</a><br>
 		Tianwei Zhang*, <b>Lequan Yu*</b>, Na Hu, Su Lv, Shi Gu. <br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2020.</br>
 	</li>
