--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
 		<em>Medical Physics</em>, 2020.</br>
 	</li>
 	<li>
+		<a href="https://arxiv.org/abs/2007.06279" target="_blank">Dual-Teacher++: Exploiting Intra-domain and Inter-domain Knowledge with Reliable Transfer for Cardiac Segmentation</a><br>
+		Kang Li, Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Pheng-Ann Heng. <br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
+	</li>
+	<li>
 		<a href="https://arxiv.org/abs/2007.09316" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
 		Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
