--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[11/2020] One paper was accepted by TMI.
+	</li>
+	<li>
 		[09/2020] Two papers were accepted by TMI.
 	</li>
 	<li>
