--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[11/2020] One paper was accepted by TMI.
+		[11/2020] One paper about annotation-efficient cardiac segmentation was accepted by TMI.
 	</li>
 	<li>
 		[09/2020] Two papers were accepted by TMI.
@@ -143,15 +143,16 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
 	</li>
 	<li>
+		<a href="https://ieeexplore.ieee.org/document/9261435" target="_blank">Dual-Teacher++: Exploiting Intra-domain and Inter-domain Knowledge with Reliable Transfer for Cardiac Segmentation</a><br>
+		Kang Li, Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Pheng-Ann Heng. <br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
+	</li>
+	<li>
 		<a href="https://aapm.onlinelibrary.wiley.com/doi/abs/10.1002/mp.14517" target="_blank">Automatic intraprostatic lesion segmentation in multiparametric magnetic resonance images with proposed multiple branch UNet</a><br>
 		Yizheng Chen, Lei Xing, <b>Lequan Yu</b>, Hilary P. Bagshaw, Mark K. Buyyounouski, Bin Han. <br>
 		<em>Medical Physics</em>, 2020.</br>
 	</li>
-	<li>
-		<a href="https://arxiv.org/abs/2007.06279" target="_blank">Dual-Teacher++: Exploiting Intra-domain and Inter-domain Knowledge with Reliable Transfer for Cardiac Segmentation</a><br>
-		Kang Li, Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Pheng-Ann Heng. <br>
-		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
-	</li>
+
 	<li>
 		<a href="https://arxiv.org/abs/2007.09316" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
 		Shujun Wang, <b>Lequan Yu<sup>†</sup></b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
