--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
 	<ul>
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
+	<p><font face="Arial" size="4"><b>2021</b></font></p>
+	<ul>
+	<li>
+		<a href="" target="_blank">Modularized Data-Driven Reconstruction Framework for Non-ideal Focal Spot Effect Elimination in Computed Tomography</a><br>
+		Zhicheng Zhang, <b>Lequan Yu</b>, Wei Zhao, Lei Xing. <br>
+		<em>Medical Physics</em>, 2021.</br>
+	</li>
+	</ul>
 	<p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
 	<li>
