--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 					Stanford University <br>
 					Palo Alto, CA 94304<br>
 					<br>
-					Email: lequany at stanford dot edu
+					Email: ylqzd2011 [at] gmail [dot] com <br> 
+					&nbsp &nbsp &nbsp &nbsp or lequany [at] stanford [dot] edu
 				</p>
 				<p> <a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/yulequan"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
@@ -71,9 +72,12 @@
 	Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.
 </p> 
 
-<p>
-	If you would like to work with me, feel free to send me an email. Remote collaboration is also welcome!
+<p style="color:red;">
+	Multiple positions (including PhDs/RAs/Postdocs/Interns) are available on artificial intelligence in healthcare. 
+	Passion in research, creative, and well-motivated for high-quality research is preferred and please drop me emails if you are interested.
+	Remote collaboration is also welcome!
 </p>
+	
 <h2>News</h2>
 
 
