--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 </p> 
 
 <p style="color:red;">
-	Multiple positions (including PhDs/RAs/Postdocs/Interns) are available on artificial intelligence in healthcare. 
-	Passion in research, creative, and well-motivated for high-quality research is preferred and please drop me emails if you are interested.
+	Multiple positions (including PhDs/RAs/Postdocs/Interns) are available on artificial intelligence in healthcare.<br> 
+	Passion in research, creative, and well-motivated for high-quality research is preferred and please drop me emails if you are interested.<br>
 	Remote collaboration is also welcome!
 </p>
 	
