--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <p style="color:red;">
 	Multiple positions (including PhDs/RAs/Postdocs/Interns) are available on artificial intelligence in healthcare.<br> 
-	Passion in research, creative, and well-motivated for high-quality research is preferred and please drop me emails if you are interested.<br>
+	Passion in research and well-motivated for high-quality research are preferred and please drop me emails if you are interested.<br>
 	Remote collaboration is also welcome!
 </p>
 	
