--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <p>
 	My research lies at the intersection of artificial intelligence and medical image analysis. 
 	I am dedicated to designing data-efficient learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. 
-	Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.
+	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
 </p> 
 
 <p style="color:red;">
