--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 </p> 
 
 <p style="color:red;">
-	Multiple positions (including PhDs/RAs/Postdocs/Interns) are available on artificial intelligence in healthcare.<br> 
-	Passion in research and well-motivated for high-quality research are preferred and please drop me emails if you are interested.<br>
+	I am looking for self-motivated PhD students, research assistants, PostDocs, and interns, who are interested in artificial intelligence for healthcare. 
+	Welcome to drop me an email with your CV and transcripts. <br> 
 	Remote collaboration is also welcome!
 </p>
 	
