--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </p> 
 
 <p style="color:red;">
-	I am looking for self-motivated PhD students, research assistants, postdocs, and interns, who are interested in artificial intelligence for healthcare. 
+	I will join the Department of Statistics and Actuarial Science at HKU as an assistant professor. I am looking for self-motivated PhD students, research assistants, postdocs, and interns, who are interested in artificial intelligence for healthcare. 
 	Welcome to drop me an email with your CV and transcripts. <br> 
 	Remote collaboration is also welcome!
 </p>
