--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					Palo Alto, CA 94304<br>
 					<br>
 					Email: ylqzd2011 [at] gmail [dot] com <br> 
-					&nbsp &nbsp &nbsp &nbsp or lequany [at] stanford [dot] edu
+					&nbsp &nbsp &nbsp &nbsp or lqyu [at] hku [dot] hk
 				</p>
 				<p> <a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/yulequan"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
@@ -83,6 +83,9 @@
 
 <div style="height: 240px; overflow: auto;">
 <ul>
+	<li>
+		[02/2021] One paper about CT reconstruction was accepted by Medical Physics.
+	</li>
 	<li>
 		[11/2020] One paper about annotation-efficient cardiac segmentation was accepted by TMI.
 	</li>
