--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 
 <p style="color:red;">
 	I will join the Department of Statistics and Actuarial Science at HKU as an assistant professor. I am looking for self-motivated PhD students, research assistants, postdocs, and interns, who are interested in artificial intelligence for healthcare. 
-	Welcome to drop me an email with your CV and transcripts. <br> 
-	Remote collaboration is also welcome!
+	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 	
 <h2>News</h2>
