--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, Stanford University, Stanford, CSE, CUHK, The Chinese University of Hong Kong, ZJU, Zhejiang University"> 
+<meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, The University of Hong Kong, HKU, Stanford University, Stanford, CUHK, The Chinese University of Hong Kong, ZJU, Zhejiang University"> 
 <meta name="description" content="Lequan Yu's home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Lequan Yu, Stanford University</title>
+<title>Lequan Yu Homepage</title>
 
 
 <script>
@@ -36,15 +36,15 @@
 					<h1>Lequan Yu</h1><h1>
 				</h1></div>
 
-				<h3>Postdoctoral Research Fellow</h3>
+				<h3>Assistant Professor</h3>
 				<p>
-					1070 Arastradero Road, <br>
-					Dept. of Radiation Oncology<br>
-					Stanford University <br>
-					Palo Alto, CA 94304<br>
+					Rm 226, Run Run Shaw Building, <br>
+					Department of Statistics and Actuarial Science<br>
+					The University of Hong Kong <br>
+					Hong Kong<br>
 					<br>
-					Email: ylqzd2011 [at] gmail [dot] com <br> 
-					&nbsp &nbsp &nbsp &nbsp or lqyu [at] hku [dot] hk
+					Email: lqyu [at] hku [dot] hk
+			
 				</p>
 				<p> <a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/yulequan"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
@@ -62,8 +62,8 @@
 
 <h2>Biography</h2>
 <p>
-	I am a postdoctoral research fellow in <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
-	Before that, I obtained my Ph.D. degree in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a> in July 2019. 
+	I am currently an assistant professor at The University of Hong Kong. Before joining HKU, I was a postdoctoral research fellow in <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
+	I obtained my Ph.D. degree in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a> in July 2019. 
 	Previously, I received the B.Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
 </p>
 <p>
@@ -73,8 +73,12 @@
 </p> 
 
 <p style="color:red;">
-	I will join the Department of Statistics and Actuarial Science at HKU as an assistant professor. I am looking for self-motivated PhD students, research assistants, postdocs, and interns, who are interested in artificial intelligence for healthcare. 
+	I am looking for self-motivated PhD students, research assistants, postdocs, and interns, who are interested in artificial intelligence for healthcare. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
+</p>
+	
+<p>
+	If you are an HKU student interested in doing research with me, please send me an email.
 </p>
 	
 <h2>News</h2>
@@ -120,7 +124,7 @@
 <h2>Experience</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">Stanford University, Palo Alto, California, USA</div> <div style="float:right; text-align:right">Nov. 2019 – Present</div><br>
+		<div style="float:left; text-align:left">Stanford University, Palo Alto, California, USA</div> <div style="float:right; text-align:right">Nov. 2019 – Mar. 2021</div><br>
 		Postdoctoral Research Fellow<br>
 		Advisor: <a href="https://med.stanford.edu/xinglab.html">Prof. Lei Xing</a><br>
 	</li>
@@ -512,17 +516,16 @@
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
-	AAAI Conference on Artificial Intelligence (AAAI) 2021<br>
-	IEEE Winter Conference on Applications of Computer Vision (WACV) 2021<br>
+	Senior PC of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
+	PC of AAAI Conference on Artificial Intelligence (AAAI’20-21)<br>
+	IEEE International Conference on Computer Vision (ICCV’21, ICCV'19)<br>
+	IEEE Conference on Computer Vision and Pattern Recognition (CVPR’19-21)<br>
+	Medical Image Computing and Computer Assisted Intervention (MICCAI’18-21)<br>
+	IEEE Winter Conference on Applications of Computer Vision (WACV’20-21)<br>
+	Medical Imaging with Deep Learning (MIDL’21)<br>
 	SIGGRAPH 2020<br>
-	European Conference on Computer Vision (ECCV) 2020<br>
-	International Conference on Computer Vision and Pattern Recognition (CVPR) 2020<br>
-	AAAI Conference on Artificial Intelligence (AAAI) 2020<br>
-	IEEE Winter Conference on Applications of Computer Vision (WACV) 2020<br>
-	International Conference on Computer Vision (ICCV) 2019<br>
-	International Conference on Computer Vision and Pattern Recognition (CVPR) 2019<br>
-	International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI) 2019<br>
-	International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI) 2018<br>
+	European Conference on Computer Vision (ECCV’20)<br>
+	Asian Conference on Computer Vision (ACCV’20)<br>
 	<p style="margin-top:3px"></p>		
 </li>
 
@@ -538,17 +541,17 @@
 	IEEE Transactions on Automation Science and Engineering (TASE) <br>
 	IEEE Transactions on Artificial Intelligence (TAI) <br>
 	IEEE Transactions on Big Data (TBD) <br>
+	IEEE Transactions on Dependable and Secure Computing<br>
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
 	IEEE Robotics and Automation Letters (RA-L)<br>
-	Scientific Reports <br>
+	ACM Transactions on Computing for Healthcare<br>
+	Medical Physics <br>
 	Neurocomputing <br>		
 	International Journal of Computer Assisted Radiology and Surgery (IJCARS)<br>
 	International Journal of Medical Informatics<br>
 	Journal of Applied Clinical Medical Physics (JACMP) <br>
 	Artificial Intelligence in Medicine<br>
-	SPIE Journal of Electronic Imaging (JEI)<br>
 	Computer Methods and Programs in Biomedicine (CMPB)<br>
-	Informatics in Medicine Unlocked<br>
 	<p style="margin-top:3px"></p>		
 </li>
 
