--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
 <meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, The University of Hong Kong, HKU, Stanford University, Stanford, CUHK, The Chinese University of Hong Kong, ZJU, Zhejiang University"> 
-<meta name="description" content="Lequan Yu's home page">
+<meta name="description" content="Lequan Yu homepage">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
