--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 				<h3>Assistant Professor</h3>
 				<p>
-					Rm 226, Run Run Shaw Building, <br>
+					Run Run Shaw Building,Rm 226 <br>
 					Department of Statistics and Actuarial Science<br>
 					The University of Hong Kong <br>
 					Hong Kong<br>
