--- a/index.html
+++ b/index.html
@@ -62,18 +62,20 @@
 
 <h2>Biography</h2>
 <p>
-	I am currently an assistant professor at The University of Hong Kong. Before joining HKU, I was a postdoctoral research fellow in <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
+	I am currently an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and medical image analysis. 
+	I am dedicated to designing data-efficient learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. 
+	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
+</p>
+	
+<p>	
+	Before joining HKU, I was a postdoctoral research fellow in <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
 	I obtained my Ph.D. degree in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a> in July 2019. 
 	Previously, I received the B.Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
 </p>
-<p>
-	My research lies at the intersection of artificial intelligence and medical image analysis. 
-	I am dedicated to designing data-efficient learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. 
-	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
-</p> 
+
 
 <p style="color:red;">
-	I am looking for self-motivated PhD students, research assistants, postdocs, and interns, who are interested in artificial intelligence for healthcare. 
+	I am looking for self-motivated PhD students, postdocs, research assistants, and (remote) summer interns, who are interested in artificial intelligence for healthcare. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 	
